# mpa

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  character.md.example  config.yml.example  ctx_analysis.md  docker-compose.yml  pa.md  personalia.md  personalia.md.example  pyproject.toml  test.db  test_hook.py
.githooks/: pre-commit
agents/: fitness-coach.md  language-tutor.md
api/: admin.py  ui.html
channels/: markdown_tg.py  telegram.py  whatsapp.py
cli-configs/: himalaya.toml.example  khard.conf.example  vdirsyncer.conf.example
core/: agent.py  agents.py  artifacts.py  coding.py  compaction.py  config.py  config_store.py  contacts_config.py  email_config.py  embeddings.py  executor.py  github_app.py  goal_decomposition.py  history.py  imagegen.py  job_store.py  llm.py  log_streams.py  main.py  memory.py  models.py  permissions.py  personae.py  personas.py  prompt_builder.py  repl.py  reply_decision.py  scheduler.py  secret_store.py  skills.py  subagents.py  task_reflection.py  tools.py  vault.py  wacli.py
docs/: .gitignore  Makefile  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  tsconfig.json
humux/: .dockerignore  .gitignore  Dockerfile  Makefile  character.md.example  pyproject.toml
personae/: coding-helper.md  finance-assistant.md  fitness-coach.md  language-tutor.md  travel-planner.md  writing-editor.md
personas/: coding-helper.md  finance-assistant.md  fitness-coach.md  language-tutor.md  travel-planner.md  writing-editor.md
schema/: memory.sql
skills/: artifact-hosting.md  caldav-calendar.md  himalaya-email.md  image_generation.md  jq.md  khard-contacts.md  memory.md  scheduling.md  skill-creator.md  voice.md  wacli-whatsapp.md  weather.md
tests/: test_admin_api.py  test_admin_ui.py  test_agent_accounts.py  test_agent_tool_identity.py  test_agents.py  test_agents_admin.py  test_artifacts.py  test_browser_admin.py  test_browser_explore.py  test_browser_tool.py  test_chat_settings.py  test_chats_admin.py  test_coding.py  test_compaction.py  test_config_store.py  test_contacts_carddav.py  test_default_agent.py  test_email_config.py  test_embeddings_local.py  test_executor.py  test_github_app.py  test_goal_decomposition.py  test_group_chat.py  test_history.py  test_imagegen.py  test_inspect_admin.py  test_job_store.py  test_llm.py  test_main_lifecycle.py  test_markdown_tg.py  test_memory_admin.py  test_memory_consolidation.py  test_memory_extraction.py  test_memory_scope.py  test_memory_tiers.py  test_migration_115.py  test_per_chat_agent.py  test_per_chat_persona.py  test_permissions.py  test_persona_accounts.py  (+18 more)
tools/: browser.py  calendar_auth.py  calendar_read.py  calendar_write.py  contacts.py  (+5 more)
(+203 files in other folders)
