[project]
name = "mpa"
version = "0.13.0"
description = "Personal AI agent — unified interface across messaging, email, and calendars"
requires-python = ">=3.14"
dependencies = [
    "anthropic",
    "openai",
    "python-telegram-bot",
    "pydantic-settings",
    "pyyaml",
    "aiosqlite",
    "fastapi",
    "uvicorn[standard]",
    "faster-whisper",
    "edge-tts",
    "caldav",
    "python-dotenv",
    "apscheduler>=3.10,<4",
    "sqlalchemy",
    "tavily-python",
    "httpx",
    "jinja2",
    "python-multipart>=0.0.22",
    "vobject>=0.9.9",
    "fastembed",
    "numpy",
    "playwright",
    "cryptography",
]

[project.optional-dependencies]
# Offline on-device TTS (issue #84). Optional: pulls onnxruntime (~200MB), only
# needed when voice.backend = "kokoro". Install with `uv sync --extra kokoro`.
kokoro = ["kokoro-onnx>=0.4"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "ruff",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
